# myalgs

./: 02_node_tree.ipynb  03_depth_and_breadth_first_search.ipynb  04_has_path_problem.ipynb  Untitled.ipynb  depth-first-search.ipynb  logarithms.ipynb  pyproject.toml
.ipynb_checkpoints/: 03_depth_and_breadth_first_search-checkpoint.ipynb  04_has_path_problem-checkpoint.ipynb  depth-first-search-checkpoint.ipynb
algorithms_erickson/: 0_introduction.ipynb  0_introduction_exercises.ipynb  pyproject.toml
algorithms_erickson/.ipynb_checkpoints/: 0_introduction_exercises-checkpoint.ipynb
algorithms_karumanchi/: 01_big_o.ipynb  02_master_theorem.ipynb  pyproject.toml
algorithms_karumanchi/.ipynb_checkpoints/: 01_big_o-checkpoint.ipynb
codewars/: 4kyu_array_with_distance_of_n.ipynb  4kyu_befunge_interpreter_tests.ipynb  4kyu_conways_game_of_life.ipynb  4kyu_instant_runoff_voting.ipynb  4kyu_next_smaller_number_with_the_same_digits.ipynb  5_kyu_moving_zeros_to_the_end.ipynb  6kyu_find_cracker.ipynb  6kyu_persistent_bugger.ipynb  Untitled.ipynb  befunge_interpreter.ipynb  befunge_interpreter_tests.ipynb  next_smaller_number_with_the_same_digits.ipynb  persistent_bugger.ipynb  pyproject.toml
codewars/.ipynb_checkpoints/: 4kyu_array_with_distance_of_n-checkpoint.ipynb  4kyu_instant_runoff_voting-checkpoint.ipynb  4kyu_matrix_determinant-checkpoint.ipynb  5_kyu_moving_zeros_to_the_end-checkpoint.ipynb  6kyu_convert_string_to_camel_case-checkpoint.ipynb  6kyu_persistent_bugger-checkpoint.ipynb  7kyu_descending_order-checkpoint.ipynb  Untitled-checkpoint.ipynb
college_algebra/: 02_matplotlib.ipynb  03_slopes.ipynb  04_factoring.ipynb  Untitled.ipynb  pyproject.toml
college_algebra/.ipynb_checkpoints/: 03_slopes-checkpoint.ipynb  Untitled-checkpoint.ipynb
dynamic_programming/: can_sum.ipynb  grid_traveler.ipynb  max_subarray_problem.ipynb  memoized_fibonacci.ipynb  recursive_algorithms.ipynb  reverse_a_linked_list.ipynb  tower_of_hanoi.ipynb  tower_of_hanoi_tests.ipynb
fastapi_starlette/: learning_to_test.ipynb  pyproject.toml
graph_problems/: 01_depth_first_search_print.ipynb  02_breadth_first_search.ipynb  03_has_path.ipynb  04_undirected_path.ipynb  05_connected_components.ipynb  06_largest_component.ipynb  07_shortest_path.ipynb  08_island_count.ipynb  09_minimum_island.ipynb
hits_and_misses/: 02_node_tree.ipynb  04_has_path_problem.ipynb  05_undirected_path.ipynb  06_new_node_tree_cursor_implementation.ipynb  06_tests.ipynb
linear_algebra/: ladr_ch1.ipynb  mlf_jon_krohn_01.ipynb  pyproject.toml  vector_basis_change.ipynb
linear_algebra/.ipynb_checkpoints/: ladr_ch1-checkpoint.ipynb
mit_algorithms/: Untitled.ipynb
pydantic/: documentation.ipynb  pyproject.toml
pydantic/.ipynb_checkpoints/: documentation-checkpoint.ipynb
python_jose/: pyproject.toml  python_jose_learning_basics.ipynb
sort_problems/: quick_sort.ipynb
statistics_formulas/: Untitled.ipynb  pyproject.toml
statistics_formulas/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
twitter_api/: pyproject.toml
twitter_api/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  aws_lambda_app-checkpoint.ipynb
