[tool.poetry]
name = "myalgs"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.4.12"
jupyterthemes = "^0.20.0"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
