[tool.poetry]
name = "algorithms-karumanchi"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]
readme = "README.md"
packages = [{include = "algorithms_karumanchi"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.3"
matplotlib = "^3.7.1"
sympy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
