[tool.poetry]
name = "codewars"
version = "0.1.0"
description = "Just my codewars notebooks"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.2"
jupyterthemes = "^0.20.0"
ipytest = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
