[tool.poetry]
name = "college-algebra"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]
readme = "README.md"
packages = [{include = "college_algebra"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.3"
mpmath = "^1.3.0"
sympy = "^1.11.1"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
jupyterthemes = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
