[tool.poetry]
name = "fastapi-starlette"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_starlette"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.2"
fastapi = "^0.87.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
