[tool.poetry]
name = "statistics-formulas"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]
readme = "README.md"
packages = [{include = "statistics_formulas"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
notebook = "^6.5.4"
jupyterthemes = "^0.20.0"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
